--- a/style.css
+++ b/style.css
@@ -6,6 +6,11 @@ h1 {
 	color: Black;
 }
 
+h4	{
+	color: Red;
+	text-align: center;
+}
+
 header {
 	text-align: center;
 }
@@ -30,7 +35,6 @@ h3.post-title {
 .container {  
   display: flex;
   justify-content: center;
-  /*align-items: center;*/
   flex-wrap: wrap;
 }
 
@@ -40,7 +44,11 @@ h3.post-title {
   border: 1px solid rgba(192,192,192,0.3);
 }
 
-
+img {
+	max-width: 500;
+	max-height: 600;
+	opacity: 0.95;
+}
 
 
 
@@ -50,22 +58,24 @@ main {
 }
 
 /*
-  	<header>
-  		<h3 class="post-title">At Beach In Winter</h3>
-  		<figure>
-  			<a href="#" target="_blank"></a>
-  			<img src="http://cdn3.livelongandtravel.com:8080/hawaii.jpg" alt="a sunny beach" width="500" height="400"/>
-  			<article>
-  				<p class="caption">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+  	<article>
+  		<a href="#" target="_blank"></a>
+  		<img src="http://www.wallpaperbetter.com/wallpaper/992/22/339/tropical-ocean-scenery-palm-tree-house-dusk-1080P-wallpaper-middle-size.jpg" alt="beach at dusk" width="500"height="400"/>
+  		<div>
+  			<h3 class="post-title">The Waves Are High & Beautiful</h3>
+  			<div>
+  				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
   				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
   				quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
   				consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
   				cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
   				proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-  				<footer>
-  					<p><i>0 Comments</i></p>
-  				</footer>
-  			</article>
-  		</figure>
-  	</header>
-  </main> */
+  				<div>
+  					<p>TRAVEL</p>
+  					<p><i>3 Comments</i></p>
+  				</div>
+  			</div>
+  		</div>
+  	</article>
+
+  */
